PROJECT(IRTestbed)
CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

FIND_PACKAGE(LLVM REQUIRED CONFIG)

include(CheckCXXCompilerFlag)

ADD_DEFINITIONS(${LLVM_DEFINITIONS})
INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIRS})

FILE(GLOB TESTBED_SRCS "testbed.cpp")
ADD_LIBRARY(IRTestbed SHARED ${TESTBED_SRCS})

FILE(GLOB WRAPPER_SRCS "wrapper.cpp")
ADD_EXECUTABLE(tb-clang ${WRAPPER_SRCS})
TARGET_LINK_LIBRARIES(tb-clang IRTestbed ${LLVM_AVAILABLE_LIBS})
ADD_EXECUTABLE(tb-clang++ ${WRAPPER_SRCS})
TARGET_LINK_LIBRARIES(tb-clang++ IRTestbed ${LLVM_AVAILABLE_LIBS})
