PROJECT(IRTestbed)
CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

set(CMAKE_CXX_FLAGS_OLD ${CMAKE_CXX_FLAGS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_OLD} -fno-rtti -fpic")

FIND_PACKAGE(LLVM REQUIRED CONFIG)

include(CheckCXXCompilerFlag)

ADD_DEFINITIONS(${LLVM_DEFINITIONS})
INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIRS})

LIST(APPEND CMAKE_PROGRAM_PATH ${LLVM_ROOT_DIR})

FILE(GLOB TESTBED_SRCS "testbed.cpp")
ADD_LIBRARY(IRTestbed SHARED ${TESTBED_SRCS})

FILE(GLOB WRAPPER_SRCS "wrapper.cpp")
ADD_EXECUTABLE(tb-clang ${WRAPPER_SRCS})
TARGET_LINK_LIBRARIES(tb-clang IRTestbed ${LLVM_AVAILABLE_LIBS})

FILE(CREATE_LINK ${IRTestbed_BINARY_DIR}/tb-clang
  ${IRTestbed_BINARY_DIR}/tb-clang++ SYMBOLIC)

FILE(CREATE_LINK ${LLVM_TOOLS_BINARY_DIR}/clang 
  ${IRTestbed_BINARY_DIR}/clang SYMBOLIC)
FILE(CREATE_LINK ${LLVM_TOOLS_BINARY_DIR}/clang++ 
  ${IRTestbed_BINARY_DIR}/clang++ SYMBOLIC) 
